# raspi-cmake-crossbuild

./: CMakeLists.txt  crossbuild.sh  test.cpp  toolchain-rpi64.cmake
